Adjust some feature

--- a/src/employee/management/Salary.form
+++ b/src/employee/management/Salary.form
@@ -438,7 +438,7 @@
                   <Color blue="0" green="0" red="0" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="13">
+                  <StringArray count="12">
                     <StringItem index="0" value="January"/>
                     <StringItem index="1" value="February"/>
                     <StringItem index="2" value="March"/>
@@ -451,7 +451,6 @@
                     <StringItem index="9" value="October"/>
                     <StringItem index="10" value="November"/>
                     <StringItem index="11" value="December"/>
-                    <StringItem index="12" value=" "/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -478,13 +477,14 @@
                   </Border>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="9" rowCount="4">
+                  <Table columnCount="10" rowCount="4">
                     <Column editable="true" title="Number" type="java.lang.Object"/>
                     <Column editable="true" title="Employee ID" type="java.lang.Object"/>
                     <Column editable="true" title="Name" type="java.lang.Object"/>
                     <Column editable="true" title="Email" type="java.lang.Object"/>
                     <Column editable="true" title="Position" type="java.lang.Object"/>
                     <Column editable="true" title="Month" type="java.lang.Object"/>
+                    <Column editable="true" title="Date Release" type="java.lang.Object"/>
                     <Column editable="true" title="Overtime Pay" type="java.lang.Object"/>
                     <Column editable="true" title="Deduction" type="java.lang.Object"/>
                     <Column editable="true" title="Net Salary" type="java.lang.Object"/>
@@ -492,6 +492,11 @@
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
